--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
 /* Definition of the design system. All colors, gradients, fonts, etc should be defined here. 
 All colors MUST be HSL.
 */
+/* index.css */
+body {
+  font-family: 'Roboto', sans-serif;
+}
 
 @layer base {
   :root {
